added styling for the category buttons

--- a/src/style.css
+++ b/src/style.css
@@ -341,6 +341,25 @@
   .gatsby-highlight {
     margin-bottom: var(--spacing-8);
   }
+
+  .category-container {
+    display:flex;
+    column-gap: .4rem;
+    font-size: var(--fontSize-0);
+  }
+
+  .category-button {
+    padding:.5rem;
+    border-radius: 10px;
+    border-color: transparent;
+    cursor: pointer;
+    transition: all .6s;
+  }
+
+  .category-button:hover {
+    color:white;
+    background-color:#1a202c;
+  }
   
   /* Media queries */
   
