--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,7 +3,8 @@
     max-width: var(--maxWidth-wrapper);
     padding: var(--spacing-10) var(--spacing-5);
     min-height: 100vh;
-    display:grid;
+    display:flex;
+    flex-direction:column;
     padding-bottom:0;
     gap: var(--spacing-0);
 }
@@ -13,17 +14,11 @@
 }
   
 .global-header {
-    /* margin-bottom: var(--spacing-12); */
+    margin-bottom: var(--spacing-12);
 }
 
 .main-heading {
     font-size: var(--fontSize-7);
     margin: 0;
-}
-
-@media(max-width: 768px) {
-	.global-wrapper {
-        gap: var(--spacing-16);
-    }
 }
  
