Implemented new design layout

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -64,7 +64,7 @@
     --color-text-light: #4f5969;
     --color-heading: #1a202c;
     --color-heading-black: black;
-    --color-accent: #D4D4D4;
+    --color-accent: #d4d4d429;
     --input-color: #949494;
     --mobile-breakpoint: 900px;
   }
